--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile files('libs/zip4j_1.3.2.jar')
     compile 'com.android.support:design:25.2.0'
+    compile 'com.jrummyapps:android-shell:1.0.1'
 }
